# projekt-2-wikipoz000-netizen

./: CMakeLists.txt  README.md
data/: lista.txt
include/: CD.hpp  CDData.hpp  Czytnik.hpp  Wejscie.hpp
src/: CD.cpp  CDData.cpp  Czytnik.cpp  main.cpp
